[package]
name = "cargo-reduce"
version = "0.1.0"
authors = ["Chris Simpkins <chris@sourcefoundry.org>"]
edition = "2018"


[dependencies]
env_logger = "0.7.1"
failure = "0.1.6"
log = "0.4.8"
syn-inline-mod = "0.3"
syn = { version = "1.0", features = ["full", "visit-mut", "extra-traits", "parsing"] }
structopt = "0.3"
quote = "1.0"
tempfile = "3.1"
