[package]
name = "redact"
version = "0.1.0"
authors = ["Chris Simpkins <chris@sourcefoundry.org>"]
edition = "2018"


[dependencies]
env_logger = "0.10.0"
failure = "0.1.7"
log = "0.4.8"
proc-macro2 = "1.0.9"
syn-inline-mod = "0.3"
syn = { version = "1.0", features = ["full", "visit-mut", "extra-traits", "parsing"] }
structopt = "0.3"
quote = "1.0"
tempfile = "3.1"
